# RustApp

./: .gitignore
recommendation-engine/: Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yaml
recommendation-engine/src/: elasticops.rs  lib.rs  location.rs  main.rs  sharding.rs
recommendation_service/: Cargo.toml  build.rs  docker-compose.yaml
recommendation_service/proto/: recommendation.proto
recommendation_service/proto/recommendation/: recommendation.proto
recommendation_service/seed/: load.py  seed.txt
recommendation_service/src/: lib.rs  recommendation.rs  service.rs
recommendation_service/src/elastic/: indices.rs  mod.rs  ops.rs
recommendation_service/src/elasticsearch/: indices.rs
recommendation_service/src/location/: mod.rs  sharding.rs
user-service/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
user-service/proto/: user.proto
user-service/src/: client.rs  config.rs  server.rs  user.rs
user-service/test/: Dockerfile  Makefile  requirements.txt  test_user_service.py  user_pb2.py  user_pb2_grpc.py
user_service/: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
user_service/proto/: user.proto
user_service/test/: requirements.txt  test_user_service.py  user_pb2.py
