[package]
name = "recommendation_service"
version = "0.1.0"
authors = ["Stephen Leyva <sleyva1297@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
s2 = "0.0"
elastic = "0.21.0-pre.5" 
log = "0.4"
env_logger = "0.7"