[package]
name = "recommendation_service"
version = "0.1.0"
authors = ["Stephen Leyva <sleyva1297@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "geo-sharder"
path = "./src/bin/elastic/sharder.rs"

[[bin]]
name = "server"
path = "./src/bin/server/server.rs"

[dependencies]
tonic = {version="0.3",features = ["tls"]}
prost = "0.6"
tokio = { version = "*", features = ["full"] }
rand = "0.7"
s2 = "0.0"
log = "0.4"
env_logger = "0.7"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
elasticsearch = { git = "https://github.com/elastic/elasticsearch-rs", branch="7.x"}
futures = "*"

[build-dependencies]
tonic-build = "0.3.1"