[package]
name = "user_service"
version = "0.1.0"
authors = ["Stephen Leyva <sleyva1297@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "user-service-test"
path = "src/bin/test.rs"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
prost = "0.6"
tonic = {version="0.3",features = ["tls"]}
tokio = {version="0.2",features = ["stream", "macros"]}
futures = "0.3"
log = "0.4"
env_logger = "0.7"
bcrypt = "0.8"
rand = "0.7"
jsonwebtoken = "7.2"
serde = "1.0"
base64 = "0.12"
rusoto_dynamodb = "0.45"
rusoto_core = "0.45"

[build-dependencies]
tonic-build = "0.3.1"